# tknpack

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_encoding.py  pydantic_ai_integration.py  pydantic_models.py
src/tknpack/: __init__.py  ai.py
src/tknpack/core/: __init__.py  codec.py  errors.py  types.py
src/tknpack/core/ploon/: __init__.py  decoder.py  encoder.py  schema.py
src/tknpack/core/toon/: __init__.py  decoder.py  encoder.py
tests/: conftest.py  test_decoder.py  test_encoder.py  test_ploon_decoder.py  test_ploon_encoder.py  test_ploon_model.py  test_ploon_pydantic.py  test_pydantic.py  test_toon_model.py
