[project]
name = "tknpack"
version = "0.1.0"
description = "Token-optimized serialization for Pydantic models using TOON and PLOON formats"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Pavel Liashkov", email = "pavel.liashkov@protonmail.com" }]
keywords = ["toon", "ploon", "serialization", "pydantic", "llm", "token-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: General",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
ai = ["pydantic-ai>=1.0"]

[project.urls]
Homepage = "https://github.com/bigbag/tknpack"
Repository = "https://github.com/bigbag/tknpack"
Issues = "https://github.com/bigbag/tknpack/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tknpack"]

[tool.hatch.build.targets.sdist]
include = ["src/tknpack"]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pyclean>=3.1.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.1.1",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM"]
ignore = ["E203", "E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=tknpack --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/tknpack"]
omit = ["tests/*"]
